
Updates:
Added new C++17 function wrappers
Simplified definition of is_base_of
Fixed static definition for etl::string
Redefined ETL_DEPRECATED
Updated nth_type to handle a type list of zero length
Updated Github Actions to checkout@v4
Added make_delegate for C++17

Fixes:
#956 Fix build error (etl::circular_buffer)
#957 Support heterogenous lookup for maps
#959 Treat bitset with size_type

Pull Requests:
#947 Remove unused git submodule config
#965 Fix accident creation of a delegate to an rvalue delegate when copying/assigning from delegate with mismatching signature

===============================================================================
20.39.4

#948 Bug in queue pop can break queue.empty()
     Also included etl::stack in the fix.
#949 For GCC10, we should check __cplusplus >= 201709L when determining if c++20 is supported

===============================================================================
20.39.3

Updates:
Removed C++11 restriction on etl::observer::notification

Fixes:
#917 unaligned_type doesn't compile with floating point types

Pull Requests:
#946 Make include paths to private files relative

===============================================================================
20.39.2

Removed EmbeddedTemplateLibrary-20.39.0.tar.gz from project.

===============================================================================
20.39.1

Fixes:
#940 Allow etl::observer notification without argument
     Added a void specialisation to the < C++11 code.
#942 Warning on pragma c++20-compat

Updates:
Added etl::count_of, etl::has_duplicates, etl::has_duplicates_of

===============================================================================
20.39.0

Refactored:
Breaking change.
Modified io_port classes so that they are not derived from iterator types.
    Added iterator and const_iterator types.
    Added iter() and citer() member functions to get an iterator.